--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "leaflet": "1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "3.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-leaflet": "^3.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "web-vitals": "^1.0.1"
