--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-leaflet": "^3.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
