--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "leaflet": "1.6.0",
+    "react-elastic-carousel": "^0.11.5",
+    "styled-components": "^5.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "4.1.0",
